<resources>
    <string name="app_name">StockMarketSearch</string>
    <string name="stockMarketSearchTitle">Stock Market Search</string>
    <string name="stockQuoteInputHint">e.g. AAPL</string>
    <string name="getQuote">Get Quote</string>
    <string name="clear">Clear</string>
    <string name="title_activity_stock_details">StockDetailsActivity</string>
    <string name="action_settings">Settings</string>
    <string name="section_format">Hello World from section: %1$d</string>
    <string name="stockDetails">Stock Details</string>
    <string name="historical">Historical</string>
    <string name="news">News</string>
    <string name="indicators">Indicators</string>
    <string name="change">Change</string>
    <string name="favourites">Favourites</string>
    <string name="autoRefresh">AutoRefresh</string>
    <string name="sortBy">Sort By</string>
    <string name="order">Order</string>
    <string name="failToLoadData">Failed To Load Data</string>
    <string name="menuTitle">Remove?</string>
    <string name="menuNo">No</string>
    <string name="menuYes">Yes</string>
    <string-array name="indicatorSpinner">
        <item>Price</item>
        <item>SMA</item>
        <item>EMA</item>
        <item>STOCH</item>
        <item>RSI</item>
        <item>ADX</item>
        <item>CCI</item>
        <item>BBANDS</item>
        <item>MACD</item>
    </string-array>
    <string-array name="sortSpinner">
        <item>Default</item>
        <item>Symbol</item>
        <item>Price</item>
        <item>Change</item>
        <item>Change Percent</item>
    </string-array>
    <string-array name="orderSpinner">
        <item>Ascending</item>
        <item>Descending</item>
    </string-array>
    <string name="facebook_app_id">1862896700707047</string>
    <string name="fb_login_protocol_scheme">fb1862896700707047</string>
</resources>
